# bina-messenger

./: .gitignore  CMakeLists.txt  README.md
client/: CMakeLists.txt  main.cpp
client/network/: ClientAPI.cpp  ClientAPI.h
client/qml/: Admin.qml  Login.qml  Main.qml
client/resources/: resources.qrc
server/: CMakeLists.txt  DatabaseManager.cpp  DatabaseManager.h  ZmqServer.cpp  ZmqServer.h  main.cpp
shared/: messages.proto
src/cpp/: databasemanager.cpp  main.cpp
src/qml/: Login.qml
